--- a/app/src/main/res/layout/toast_base.xml
+++ b/app/src/main/res/layout/toast_base.xml
@@ -8,14 +8,9 @@
   <IconTextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
-      android:text="{fa-android}"
-      android:shadowColor="#22000000"
-      android:shadowDx="3"
-      android:shadowDy="3"
-      android:shadowRadius="1"
       android:id="@+id/img"
-      android:textSize="90dp"
-      android:textColor="#FF33B5E5" />
+      android:textSize="40dp"
+      android:textColor="@color/white" />
 
     <Button
         android:id="@+id/button"
