--- a/app/src/main/res/layout/toast_base.xml
+++ b/app/src/main/res/layout/toast_base.xml
@@ -2,13 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/list_border_back_blue" >
+    android:layout_height="wrap_content" >
 
   <IconTextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:id="@+id/img"
+      android:layout_marginBottom="4dp"
+      android:layout_marginLeft="4dp"
+      android:layout_marginTop="4dp"
       android:textSize="40dp"
       android:textColor="@color/white" />
 
