--- a/app/src/main/res/layout/toast_base.xml
+++ b/app/src/main/res/layout/toast_base.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_border_back_blue" >
 
   <IconTextView
       android:layout_height="wrap_content"
