--- a/app/src/main/res/drawable/list_border_back_yellow.xml
+++ b/app/src/main/res/drawable/list_border_back_yellow.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dip"
-        android:color="#B28500" />
-    <solid android:color="#663300" />
+        android:color="#663300" />
+    <solid android:color="#B28500" />
 </shape>
